--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+* { margin: 0 }
+
 body{
     background-color: hsl(212, 45%, 89%);
-    margin: auto;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
@@ -8,7 +13,6 @@ body{
     background-color: hsl(0, 0%, 100%);
     height: 430px;
     width: 260px;
-    margin: 150px auto;
     border-radius: 20px;
 }
 .qr-img-a{
@@ -35,14 +39,5 @@ body{
     color: hsl(220, 15%, 55%);
 }
 
-@media only screen and (min-width: 374px) and (max-width: 376px) {
-    .qr-code-card-a{
-        margin: 118.5px auto;
-    }
-  }
-  @media only screen and (min-width: 411px) and (max-width: 413px) {
-    .qr-code-card-a{
-        margin: 242.5px auto;
-    }
-  }
+
 
